# TomoPhantom

./: .buildinfo  CHANGES.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  recipe.yaml  run.sh  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: tomophantom.TomoP2D.doctree  tomophantom.TomoP3D.doctree  tomophantom.artefacts.doctree  tomophantom.ctypes.doctree  tomophantom.ctypes.dtype.doctree  tomophantom.ctypes.external.doctree  tomophantom.doctree  tomophantom.flatsgen.doctree  tomophantom.generator.doctree  tomophantom.qualitymetrics.doctree  tomophantom.supp.doctree  tomophantom.supp.libraryToDict.doctree  tomophantom.supp.speckle_routines.doctree
.doctrees/howto/: build_phantoms.doctree  installation.doctree  libraries.doctree  simulate.doctree
.doctrees/introduction/: about.doctree  libraries.doctree  start.doctree
.doctrees/jup_notebooks/: Random2Dphantom_artifacts.doctree  model2D.doctree  model3D.doctree
.doctrees/reference/: api.doctree  glossary.doctree  library_files_api.doctree  object_api.doctree
.doctrees/tutorials/: model_tutorial.doctree  object_tutorial.doctree
.github/workflows/: conda_build.yml  doc_conda.yml  docs.yml  libtomophantom_conda_upload.yml  tomophantom_conda_upload.yml
.scripts/: conda_upload.sh  conda_upload_lib.sh  decrypt_secret.sh  my_secret.json.gpg
Core/: CCPiDefines.h  CMakeLists.txt  TomoP2DModelSino_core.c  TomoP2DModelSino_core.h  TomoP2DModel_core.c  TomoP2DModel_core.h  TomoP2DSinoNum_core.c  TomoP2DSinoNum_core.h  TomoP3DModelSino_core.c  TomoP3DModelSino_core.h  TomoP3DModel_core.c  TomoP3DModel_core.h  bindings.c  utils.c  utils.h
Demos/2D/: Model.py  Model2D_t.py  Object2D.py  ReconTomoPy.py  (+1 more)
Wrappers/: CMakeLists.txt
Wrappers/MATLAB/: CMakeLists.txt  Model2DGeneratorDemo.m  Model2D_tGeneratorDemo.m  Model3DGeneratorDemo.m  Model3D_tGeneratorDemo.m  Object2DGeneratorDemo.m  Object3DGeneratorDemo.m  Reconstruction3D_Demo.m  Reconstruction_Demo.m  SpectralPhantomDemo.m
Wrappers/MATLAB/install/: compile_mex_linux.m  compile_mex_windows.m
Wrappers/MATLAB/mex_wrappers/: TomoP2DObject.c  TomoP2DSinoNum.c  TomoP3DObject.c
Wrappers/MATLAB/src/: TomoP2DModel.c  TomoP3DModel.c  TomoP3DModelSino.c
Wrappers/MATLAB/supplem/: add_stripes.m  add_zingers.m  rec2Dastra.m  rec3Dastra.m  ruota_nearest_semplice.m  sino2Dastra.m  sino3Dastra.m
Wrappers/Python/: CMakeLists.txt  README.md  setup.py.in
Wrappers/Python/Demos/: DemoModel.py  DemoModel2.py  DemoModel2D_t.py  DemoModel3D.py  DemoModel3D_t.py  DemoModel4D.py  DemoModel_temporal.py  DemoObject2D.py  DemoObject3D.py  DemoObject3D.py~  DemoReconASTRA.py  DemoReconASTRA3D.py  DemoReconASTRA3D.py~  DemoReconASTRA3D_sim.py  DemoReconASTRA3D_sim.py~  DemoReconASTRA_object3D.py  DemoReconTomoPy.py  libraryToDict.py  model4.txt  test_ModelObject.py
Wrappers/Python/Demos/2D/: Model.py  Model2D_t.py  Object2D.py  ReconASTRA.py  ReconTomoPy.py
Wrappers/Python/Demos/3D/: ReconASTRA3D.py  ReconASTRA3D_sim.py  ReconASTRA_object3D.py
Wrappers/Python/Demos/RandomPhantoms/: RandPhantGen.py
Wrappers/Python/conda-recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
Wrappers/Python/src/: TomoP2D.pyx  TomoP2D_py27.pyx  TomoP3D.pyx  TomoP3D_py27.pyx
Wrappers/Python/tomophantom/randphant/: generator.py
Wrappers/Python/tomophantom/supp/: artifacts.py  astraOP.py  flatsgen.py  normraw.py  qualitymetrics.py  recMod.py  recModIter.py  speckle_routines.py
Wrappers/Python/wip/: create_dvc_phantom.py  create_helical_phantom.py
_modules/: index.html
_static/: documentation_options.js
api/: tomophantom.TomoP2D.html  tomophantom.TomoP3D.html  tomophantom.artefacts.html  tomophantom.ctypes.dtype.html  tomophantom.ctypes.external.html  tomophantom.ctypes.html  tomophantom.flatsgen.html  tomophantom.generator.html  tomophantom.html  tomophantom.qualitymetrics.html  tomophantom.supp.html  tomophantom.supp.libraryToDict.html  tomophantom.supp.speckle_routines.html
binder/: environment.yml
conda-recipe/: meta.yaml
conda-recipe_library/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
docs/: sphinx-build.sh  sphinx_build_setup.rst
functions/: DeformObject_C.c  TomoP2DModel.c  TomoP2DModelSino.c  TomoP2DModelSino_core.c  TomoP2DModelSino_core.h  TomoP2DModel_core.c  TomoP2DModel_core.h  TomoP2DObjectSino.c  TomoP2DSinoNum.c  TomoP2DSinoNum_core.c  TomoP2DSinoNum_core.h  TomoP3DModel.c  TomoP3DModel_core.c  TomoP3DModel_core.h  TomoP3DObject.c  buildPhantom2D.c  buildPhantom2D_core.c  buildPhantom2D_core.h  buildPhantom3D.c  buildPhantom3D_core.c  buildPhantom3D_core.h  buildPhantom3D_ver2.c  buildSino2D.c  buildSino2D_core.c  buildSino2D_core.h  buildSino3D.c  buildSino3D_core.c  buildSino3D_core.h  buildSino3D_core_ver2.c  buildSino3D_core_ver2.h  utils.c  utils.h
howto/: build_phantoms.html  installation.html  libraries.html  simulate.html
introduction/: about.html  libraries.html  start.html
jup_notebooks/: Random2Dphantom_artifacts.html  model2D.html  model2D.ipynb  model3D.html  model3D.ipynb
matlab/: Model2DGeneratorDemo.m  Model2D_tGeneratorDemo.m  Model3DGeneratorDemo.m  Model3D_tGeneratorDemo.m  Object2DGeneratorDemo.m  Object3DGeneratorDemo.m  Phantom2DDeformationDemo.m  Phantom2DGeneratorDemo.m  Phantom3DGeneratorDemo.m  PhantomGeneratorDemo.m  Reconstruction_Demo.m  SpectralPhantomDemo.m
python/: CMakeLists.txt  README.md  setup.py  setup.py.in
recipe/: bld-lib.bat  build-lib.sh  build-python.sh  meta.yaml
reference/: api.html  glossary.html  library_files_api.html  object_api.html
tests/: conftest.py  test_flats_gen.py  test_generators.py  test_models2d.py  test_models3d.py  test_models_sino2d.py  test_models_sino3d.py  test_object_2d.py  test_object_sino2d.py  test_object_sino3d.py  test_objects3d.py  test_sino2d_artefacts.py
tomophantom/: TomoP2D.py  TomoP3D.py  __init__.py  artefacts.py  flatsgen.py  generator.py  qualitymetrics.py
tutorials/: model_tutorial.html  object_tutorial.html
(+160 files in other folders)
